@@ -1,5 +1,7 @@
 March 2024 8.7
  - PHP 8.3 compatibility
+ - LAM Pro:
+  -> Request access: support Windows groups (266)
 
 
 18.12.2023 8.6
